# harness-engineering

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
policy/: default.json
sample_data/: sources.json
sample_data/evals/: basic.json
sample_data/policy/: restrictive.json
scripts/: secret_scan.py
src/harness_engineering/: __init__.py  blueprint.py  cli.py  evals.py  mcp.py  memory.py  models.py  multi_agent.py  policy.py  provider.py  reviewer.py  runner.py  store.py  tools.py  tracing.py  workflow.py
tests/: test_harness.py
